# libgpublas

./: .gitignore  Makefile  README.md  TODO.md  blas.h  blas2cuda.c  blas2cuda.cu  blas2cuda.h  blas2cuda.sh  cblas.h  clblas_ext.py  clblast_ext.py  clext.h  clext.py  common.h  conversions.cc  conversions.h  entry.c  fortran-compat.c  fortran-compat.h  gpublas.c  gpublas.h  meson.build  meson_options.txt  objtrack.sh  runtime-blas.c  runtime-blas.h  runtime-mem.hpp  runtime.c  runtime.h
blas_level1/: amax.cc  amax.cu  amin.cc  asum.cc  asum.cu  axpy.cc  axpy.cu  copy.cc  copy.cu  dot.cc  dotc.cc  dotu.cc  level1.h  nrm2.cc  rot.cc  rotg.cc  rotm.cc  rotmg.cc  rotmg.cu  scal.cc  swap.cc  swap.cu
blas_level2/: bmv.cc  gbmv.cc  gbmv.cu  gemv.cc  gemv.cu  ger.cc  hbmv.cc  hemv.cc  her.cc  her2.cc  hpmv.cc  hpr.cc  hpr2.cc  level2.h  pmv.cc  spr.cc  spr2.cc  symv.cc  syr.cc  syr2.cc  tbmv.cc  tbsv.cc  tpmv.cc  tpsv.cc  trmv.cc  trsv.cc
blas_level3/: gemm.cc  hemm.cc  her2k.cc  herk.cc  level3.cc  level3.h  symm.cc  syr2k.cc  syrk.cc  trmm.cc  trsm.cc
data/: runtimes.txt
lib/: Makefile  blas_tracker.c  blas_tracker.h  callinfo.c  callinfo.h  fortran-compat.c  meson.build  obj_tracker.c  obj_tracker.h  oracle.c  oracle.h  rbtree.c  rbtree.h
lib/tests/: allocs.c  run_allocs.sh
scripts/: analyze_trace.py  api_analyze.py  blas2cuda.sh  blas2cuda_dbg.sh  blas2cuda_prof.sh  blas_api.py  cgram.txt  dataflow_ltrace.py  find_ptr.py  find_ptr_objtrace.py  ltrace.conf  make_trace.sh  maketable.py  objtrace-ltrace.sh  objtrace.sh  objtrack.sh  objtrack_dbg.sh  parser.py  plot.py  plot_over_time.py  plot_results.py  plot_size_and_time.py  reuse.pl  run_nvblas.sh  to_csv.pl  trace_blas.sh
tests/: Makefile  copy.c  dsdot.c  gbmv.c  gemm.c  hemm.c  nvblas.conf  rot.c  run_tests.pl  test.c  test.h  trmv.c  trsm.c  validate.pl
tests/c/: Makefile  copy.c  dsdot.c  gemm.c  hemm.c  meson.build  nvblas.conf  rot.c  test.c  test.h  trmv.c
tests/cuda/: GeForce GT 750M.txt  Makefile  Quadro M4000.txt  Tesla K80.txt  bench-mem.cu  um-maps-debug.cu
tests/netlib/: meson.build  test.py
tests/octave/: sgemm.m
tests/opencl/: .gitignore  Makefile  clext.h  kernel.cl  svm-kernel.c  svm-mem-kernel.c  svm.c  util.c  util.h
