option('CUDA', type: 'string', value: '/opt/cuda', description: 'Path to CUDA libraries and headers')
option('runtime', type: 'combo', choices: ['auto', 'opencl', 'cuda'], value: 'auto', description: '')
option('optflags', type: 'string', value: '-O2', description: 'Optimization flags')
option('blas_opt', type: 'boolean', value: true, description: 'Optimize when to use GPU for BLAS calls.')
